Fix DID-506 "Percent input ghost text too long for Spanish"

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -685,7 +685,7 @@ span.radio-list.no-padding {
     background-color: #FFF;
     border: 1px solid #869FB1;
     box-shadow: 4px 4px #EDF3F6 inset;
-    width: 12em;
+    width: 13em;
     color: #869FB1;
 }
 
